--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "history": "^5.0.0",
     "jquery-slimscroll": "^1.3.8",
     "jquery-sticky-kit": "^1.1.3",
+    "jwt-decode": "^3.1.2",
     "line-awesome": "^1.3.0",
     "maskedinput": "^3.3.11",
     "moment": "^2.27.0",
