--- a/package.json
+++ b/package.json
@@ -53,12 +53,13 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-accessible-accordion": "^5.0.0",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-v5": "^1.4.0",
     "react-chartjs-2": "^4.0.1",
     "react-custom-scrollbars": "^4.2.1",
-    "react-datepicker": "^4.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.27.1",
